# Scrapy_Project

./: pyproject.toml
Project/Project/: items.py  pipelines.py  settings.py
Project/Project/spiders/: KP.py
Project/news_service/: news_service.py
