[tool.poetry]
name = "first-attempt"
version = "0.1.0"
description = "Trying scrapy"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.12.0"
pymongo = "^4.11"
fastapi = {extras = ["standard"], version = "^0.115.8"}
playwright = "^1.50.0"
scrapy-playwright = "^0.0.42"
pillow = "^11.1.0"
aiohttp = "^3.11.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
